replace ofMutable method